demo run without assosiation

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 
 .idea/workspace.xml
+simulator/cam_front.mat
+simulator/cam_rear.mat
+simulator/radar_front.mat
+simulator/radar_rear.mat
+objectClasses/__pycache__/__init__.cpython-36.pyc
+objectClasses/__pycache__/objectClasses.cpython-36.pyc
+objectClasses/__pycache__/__init__.cpython-36.pyc
+objectClasses/.DS_Store
+objectClasses/__pycache__/__init__.cpython-36.pyc
+objectClasses/__pycache__/__init__.cpython-36.pyc
+*.pyc
